# FruitMaster

./: .gitignore  evaluation.py  fine-tune.ipynb  fine-tune.py  main.py  predict.ipynb  predict.py  predict_ui.py  pyproject.toml  train.ipynb  train.py
.gradio/flagged/: dataset1.csv
